# dave-io

./: .dev.vars.ci  .dev.vars.example  .editorconfig  .env.example  .gitignore  .prettierignore  .tool-versions  AGENTS.md  AI.md  API-DOCUMENTATION.md  AUTH.md  BUGFIXES.md  CLAUDE.md  CRUSH.md  DOCS.md  IDEAS.md  LOGGING.md  MERGING.md  PANDORICA.md  README.md  REDIRECTS.json  RESUME.md  SCRATCHPAD.md  SCRIPTS.md  SCRIPTS.mmd  SPLIT-POST.md  STATE.md  TODO.md  WASM.md  app.vue  biome.json  bun.lockb  dave-io.code-workspace  dist  drizzle.config.ts  env.d.ts  eslint.config.cjs  eslint.config.js  eslint.config.ts  geecee  (+21 more)
.claude/: settings.local.json
.codacy/: codacy.yaml
.github/: copilot-instructions.md  dependabot.yml
.trunk/: trunk.yaml
_backup/: kv-2025-05-20-220449.json  kv-2025-05-29-011125.json
app/: app.vue
blog/: 2025-01-13_0x5f3759df-a-true-magic-number.md  2025-01-14_getting-started-with-meshtastic.md  2025-01-15_we-have-to-call-the-police-flying-with-flipper-zero.md  2025-01-16_prometheus-is-cool-and-good.md  2025-01-20_how-i-turned-notion-into-a-blog.md  2025-01-23_reproductiverights-gov.md  2025-03-27_genderbase.md  2025-04-11_good-times-in-the-shell.md  2025-04-15_microcommissioning.md  2025-04-28_ai-knows-just-how-to-manipulate-you.md  2025-08-21_not-everyone-can-use-a-vpn.md  2025-08-26_neurakink.md  2025-09-06_taming-mcp-madness-with-metamcp-and-tailscale.md  2025-09-08_sdam-and-living-without-recall.md  2025-09-20_i-am-not-an-ms-warrior.md
components/: Background.vue  CurlCommand.vue  (+17 more)
wasm/imageops/: Cargo.toml
wasm/imageops/src/: lib.rs
(+591 files in other folders)
