[package]
name = "imageops"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
  "webp",
] }
js-sys = "0.3"
wee_alloc = "0.4"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
